# simple-wal

./: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-simple-wal  bazel-testlogs  go.mod  main  main.go
cmd/simplewal/: BUILD  main.go
internal/wal/: BUILD  wal.go  wal_test.go
proto/: wal.proto
utils/: BUILD.bazel  helper.go
